test_src/compiler_errors/types/arithmetic/ModFloatError5.b
class ModFloatError3 {
    void test() {
        Double value = 2.0;
        println(value % 3);
    }
}
